data/all_generated_tests/raw_wast_tests/block_StackCorruption_1880.wast
;; 1. **Test Nested Block with Incorrect End Token**:    - Description: Create a block with nested blocks where the inner block is missing the `end` token, causing the outer block to incorrectly manage the stack.    - Constraint: Checking the well-nested requirement of blocks.    - Reasoning: This should reveal whether the end of a block is correctly identified, potentially leading to stack corruption when the unmatched block ends are encountered.

(assert_malformed
  (module (func (block (block (nop)))
  )) 
  "unexpected end of section or function")